--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ body {
             /* Sit on top */
             padding-top: 1px;
             /* Location of the box */
-            left: 0;
+            left: inherit;
             top: 0;
             width: 360px;
             /* Full width */
