--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ font-size:x-small;
             <button onclick="ecShow()" class="button button4">Executive Committee</button><br>
             <button onclick="allregionsMenu()" class="button button1">All Members</button><br>
             <button onclick="welfare()" class="button button2">Welfare Schemes</button><br>
-              <button  class="button button4"><a href="https://gvssmark.github.io/ibra/ins.html" target="_blank" >Insurance</style> </a></button><br>
+              <button  class="button button4"><a href="https://gvssmark.github.io/ibra/ins2223admin.html" target="_blank" >Insurance</style> </a></button><br>
 </div>
 
 <div id="welf" style="display:none">
