--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IBRA-APTS</title>
     <script src="index.js" defer></script>
-<script src="https://drive.google.com/uc?id=1-6YmzpDVGtRCqp__CRDHtEocDMDUJpi_"></script> 
+<script src="https://drive.google.com/thumbnail?id=1-6YmzpDVGtRCqp__CRDHtEocDMDUJpi_"></script> 
 
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#317EFB" />
@@ -658,7 +658,7 @@ document.getElementById("divpenbrs").style.display = "none";
             if (membData[0].district.length > 0) { toDisplay += membData[0].district + " District <br>" }
             phid= membData[0].photo.length >5 ? membData[0].photo :"1QX-GUIL2g6tf2QqMG3_gRZIaUeCTRR0X"
   
-ph= "<img  src='https://drive.google.com/uc?export=view&id=" + phid +"' width='100' height='100'>"
+ph= "<img  src='https://drive.google.com/thumbnail?id=" + phid +"' width='100' height='100'>"
             toDisplay += "<td width=100>" + ph
             toDisplay += "<tr><td colspan=2><b>Phones: </b>"
             if (membData[0].fixed.length > 0) { toDisplay += membData[0].fixed + " / " }
