--- a/attendancesurvery.html
+++ b/attendancesurvery.html
@@ -10,6 +10,7 @@
   <title>IBRA Likely Attendance</title>
   <style>
     body { background: white; }
+    #welcome {width: 400px; margin: 20px auto; }
     form { background: grey;
       
       font-family: Arial, sans-serif; 
