--- a/attendancesurvery.html
+++ b/attendancesurvery.html
@@ -102,7 +102,7 @@ Please mark your Attendance here.<p>
   </select>  
   </table>
   
-  <button id="okButton"  onclick='showHideReport()' style="background: green;" disabled>OK</button>
+  <button id="okButton"  onclick='showHideReport()' style="background: green;" disabled>SUBMIT</button>
   <button type="button" style="background: red;" onclick="resetForm()">Cancel</button>
 
   <p id="message">&nbsp</p>
