--- a/attendancesurvery.html
+++ b/attendancesurvery.html
@@ -85,7 +85,7 @@ Please mark your Attendance here.<p>
   <input type="tel" id="mobileNo" name="Mobile" pattern="[6-9][0-9]{9}" placeholder="Mobile" required  onclick="this.select()" autocomplete="off"/>
 
   <label for="NoAttend">Number Attending:</label>
-  <input type="number" id="persons" placeholder="Number of Persons" name="Persons" pattern="\d*"  min="1" max="2" required value=1/>
+  <input type="number" id="persons" placeholder="Number of Persons" name="Persons" pattern="\d*"  min="1" max="2" required >
   
 
   <input type="text" id="attendanceDate" name="Attendance" readonly style="display: none;" />
