--- a/attendancesurvery.html
+++ b/attendancesurvery.html
@@ -59,7 +59,7 @@
 <body>
 <div id='welcome'>
 
-<h3 onclick='showHideReport()'>Invitation </h3>
+<h3 >Invitation </h3>
 <h3>XIII Biennial General Body <br>
 SILVER JUBILEE CONFERENCE <br>of IBRA</h3>
 <div id='postsubmit'>
