--- a/attendancesurvery.html
+++ b/attendancesurvery.html
@@ -58,8 +58,6 @@
 </head>
 <body>
 <div id='welcome'>
-
-<h3 >Invitation </h3>
 <h3>XIII Biennial General Body <br>
 SILVER JUBILEE CONFERENCE <br>of IBRA</h3>
 <div id='postsubmit'>
@@ -70,7 +68,7 @@ Please mark your Attendance here.<p>
 <li>Duplicate entry restricted.
 <li>You are allowed to change Mobile No only if required.
 </ul>
-<h3 onclick='showHideReport()' style='color:red; text-align:right;'>Show / Hide Report</h3>
+<h3 onclick='showHideReport()' style='color:red; text-align:right;'>Show / Hide Report&nbsp;&nbsp; </h3>
 </div>
 </div>
 
