--- a/attendancesurvery.html
+++ b/attendancesurvery.html
@@ -13,7 +13,7 @@
   <style>
     body { background: white; }
     #welcome {width: 400px; margin: 20px auto; }
-    form { background: grey;
+    form { background: #ebe6e6;
       
       font-family: Arial, sans-serif; 
       margin: 20px auto; 
@@ -62,7 +62,7 @@
 SILVER JUBILEE CONFERENCE <br>of IBRA</h3>
 <div id='postsubmit'>
 <p class='message'>Join us at Visakhapatnam on 21st March, 2025 for the gorgeous Silver Jubilee Conference of our Indian Bank Retirees Association.
-Please mark your Attendance here.<p>
+Please mark your Attendance here.<//p>
 <ul>
 <li>Please input number of persons attending.
 <li>Duplicate entry restricted.
