--- a/attendancesurvery.html
+++ b/attendancesurvery.html
@@ -4,6 +4,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +14,7 @@
   <style>
     body { background: white; }
     #welcome {width: 400px; margin: 20px auto; }
-    form { background: #ebe6e6;
+    form { background: grey;
       
       font-family: Arial, sans-serif; 
       margin: 20px auto; 
@@ -24,7 +25,8 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);  
     }
     label { display: block; margin-top: 10px; color: blue; }
-    input { width: 95%; padding: 5px; margin-top: 5px; border: 1px solid #ccc; border-radius: 5px; outline: none; font-size: 1.5em; letter-spacing: 2px;}
+    input, select { width: 95%; padding: 5px; margin-top: 5px; border: 1px solid #ccc; border-radius: 5px; outline: none; font-size: 1.5em; letter-spacing: 2px;}
+    select {width:100px; background:yellow;}
     button { width: 100%; padding: 10px; margin-top: 5px; border-radius: 5px; font-size: large; color: white; }
     button:disabled { background-color: #ccc; cursor: not-allowed; }
     p { color: red; font-size: 14px; }
@@ -62,7 +64,7 @@
 SILVER JUBILEE CONFERENCE <br>of IBRA</h3>
 <div id='postsubmit'>
 <p class='message'>Join us at Visakhapatnam on 21st March, 2025 for the gorgeous Silver Jubilee Conference of our Indian Bank Retirees Association.
-Please mark your Attendance here.<//p>
+Please mark your Attendance here.<p>
 <ul>
 <li>Please input number of persons attending.
 <li>Duplicate entry restricted.
