--- a/attendancesurvery.html
+++ b/attendancesurvery.html
@@ -1,10 +1,3 @@
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +7,7 @@
   <style>
     body { background: white; }
     #welcome {width: 400px; margin: 20px auto; }
-    form { background: grey;
+    form { background: #e7dede;
       
       font-family: Arial, sans-serif; 
       margin: 20px auto; 
