--- a/attendancesurvery.html
+++ b/attendancesurvery.html
@@ -61,7 +61,7 @@ Please mark your Attendance here.<p>
 <ul>
 <li>Please input number of persons attending.
 <li>Duplicate entry restricted.
-<li>You are allowed to change Mobile No only if required.
+<li>You can update Mobile if required.
 </ul>
 <h3 onclick='showHideReport()' style='color:red; text-align:right;'>Show / Hide Report&nbsp;&nbsp; </h3>
 </div>
