--- a/attendancesurvery.html
+++ b/attendancesurvery.html
@@ -53,9 +53,10 @@
    background-position: 10px 10px;
   background-repeat: no-repeat; 
   font-size: 16px;
-  width:87%;
+  width:80%;
   padding: 12px 20px 12px 40px;
   border: 1px solid #ddd;
+	       margin-left:10px;
   margin-bottom: 12px;}
     
       
