--- a/attendancesurvery.html
+++ b/attendancesurvery.html
@@ -29,6 +29,7 @@
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
     #name {text-transform: capitalize; color:white}
      #report{display:none; }
+	  #plreport {display:none; }
       table {border-collapse: collapse; width:96%; margin:10px;}
 	  
 	 #pltable 
@@ -77,7 +78,7 @@ Please mark your Attendance here.<p>
 </ul>
 
 </div>
-<h3 onclick='showHideReport()' id='shhide' style='color:white;background:red; padding:5px; position:fixed; top:0px;left:10px; margin-top:70px;'>Show Report&nbsp;&nbsp; </h3>
+<h3 onclick='showHideReport()' id='shhide' style='color:white;background:red; width:125px; padding:5px; position:fixed; top:0px;left:10px; margin-top:70px;'>Show Report&nbsp;&nbsp; </h3>
 
 </div>
 
