--- a/attendancesurvery.html
+++ b/attendancesurvery.html
@@ -78,7 +78,7 @@ Please mark your Attendance here.<p>
 </ul>
 
 </div>
-<h3 onclick='showHideReport()' id='shhide' style='color:white;background:red; width:125px; padding:5px; position:fixed; top:0px;left:10px; margin-top:70px;'>Show Report&nbsp;&nbsp; </h3>
+<h3 onclick='showHideReport()' id='shhide' style='color:white;background:red; width:125px; padding:5px; position:fixed; top:0px;left:10px; margin-top:70px;'>Reports</h3>
 
 </div>
 
